trunk/src/objects/MemberActivity__c.object
<CustomObject>
    <description>Object for tracking changes to Members</description>
    <fields>
        <fullName>ActivityId__c</fullName>
        <label>ActivityId</label>
        <referenceTo>Activity__c</referenceTo>
        <relationshipLabel>MemberActivities</relationshipLabel>
        <relationshipName>MemberActivities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChangeType__c</fullName>
        <label>ChangeType</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberName__c</fullName>
        <label>MemberName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>MemberActivity</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MemberActivities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>